--- a/src/index.css
+++ b/src/index.css
@@ -19,4 +19,19 @@ body {
 	.logo-image-container {
 		@apply sm:w-56 h-full flex justify-center items-center cursor-pointer hover:bg-gray-200 border-2;
 	}
+	.sponsor-container {
+		@apply p-2 w-full md:w-1/4 lg:w-1/5 bg-gray-200 md:bg-white my-2;
+	}
+	.sponsor-image-container {
+		@apply w-full h-full flex justify-center items-center cursor-pointer xl:hover:scale-110 transition duration-300;
+	}
+	.schedule-list-item {
+		@apply flex flex-col gap-2 py-4 sm:gap-6 sm:flex-row sm:items-center;
+	}
+	.schedule-time {
+		@apply flex flex-col gap-2 py-4 sm:gap-6 sm:flex-row sm:items-center;
+	}
+	.schedule-text {
+		@apply text-lg font-semibold text-gray-900;
+	}
 }
